# Silent_Speech_Interface

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  environment.yml  pyproject.toml
tests/: test_smoke.py
